crates/solidity-v2/testing/snapshots/diagnostics_output/semantic/linearisation_impossible/contract/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 5005] Error: Linearization of inheritance graph impossible
   ╭─[input.sol:8:1]
   │
 8 │ contract ListsBoth is Sub, ParentA, ParentB {}
   │ ───────────────────────┬──────────────────────  
   │                        ╰──────────────────────── Error occurred here.
───╯
